# funcnodes_core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: py_test.yml  version_publish_main.yml
funcnodes_core/: __init__.py  __main__.py  _logging.py  config.py  eventmanager.py  io.py  node.py  nodemaker.py  nodespace.py  testing.py
funcnodes_core/lib/: lib.py
funcnodes_core/utils/: deprecations.py  functions.py  nodetqdm.py  plugins.py  serialization.py
src/funcnodes_core/: __init__.py  _setup.py  config.py  datapath.py  eventmanager.py  io.py  node.py  nodemaker.py  testing.py  triggerstack.py
src/funcnodes_core/lib/: lib.py
src/funcnodes_core/utils/: cache.py  files.py  plugins.py  plugins_types.py  saving.py  serialization.py
tests/: conftest.py  test_cache_utils.py  test_config.py  test_data.py  test_datapaths.py  test_decorator.py  test_eventmanager.py  test_eventmanager_concurrency.py  test_functions.py  test_graph.py  test_lib.py  test_lib2.py  test_nodeclass.py  test_nodeclassmixin.py  test_nodeio.py  test_nodemaker.py  test_nodespace.py  test_nodeutils.py  test_setup.py  test_triggering.py  test_triggerstack.py
tests/test_utils/: test_deprecations.py  test_files.py  test_logging.py  test_plugins.py  test_testing.py
